<resources>
    <string name="app_name">lumi</string>
    <string name="sign_in_subtitle">Welcome back!</string>
    <string name="sign_up_subtitle">Create your account</string>
    <string name="email_label">Email Address</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_settings_fragment">Hello settings fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="queued_badge_text">Queued</string>
    <string name="queued_badge_content_description">Pending upload</string>
    <string name="settings_title">Settings</string>
    <string name="change_plan">Change Plan</string>
    <string name="back">Back</string>
    <string name="selected_plan_none">Selected plan: none</string>
    <string name="selected_plan_label">Selected plan: %1$s</string>
    <string name="plans_load_failed">Failed to load plans</string>
    <string name="create_album">Create Album</string>
    <string name="create_new_album">Create New Album</string>
    <string name="album_name">Album Name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="album_icon_content_description">Album</string>
    <string name="albums_load_failed">Failed to load albums</string>
    <string name="back_to_albums">Back to albums</string>
    <string name="album_photos_title">Album: %1$s</string>
    <string name="capture_photo">Capture photo</string>
    <string name="camera_permission_required">Camera permission is required</string>
    <string name="upload_photo_failed">Failed to upload photo</string>
    <string name="record_video">Record video</string>
    <string name="upload_video_failed">Failed to upload video</string>
    <string name="loading">Loading</string>
    <string name="photo_uploaded_successfully">Photo uploaded successfully</string>
    <string name="video_uploaded_successfully">Video uploaded successfully</string>
    <string name="album_share_title">Album website</string>
    <string name="album_share_message">Anyone with this link can view and download this album.</string>
    <string name="copy_link">Copy link</string>
    <string name="close">Close</string>
    <string name="album_link_copied">Album link copied</string>
    <string name="album_share_failed">Failed to publish or load album website</string>
    <string name="close_album_website_title">Close album website?</string>
    <string name="close_album_website_message">The shared link will stop working. Your album and photos will not be deleted.</string>
    <string name="close_website">Close website</string>
    <string name="album_share_close_failed">Failed to close album website</string>
    <string name="album_share_closed">Album website closed</string>
</resources>